feat: explorer add create dir func
