# app/admin/apis/routes/dvroutes/explorer_sftp_routes.go
@@ -20,4 +20,5 @@ func registerExplorerSftpRoutes(g *gin.RouterGroup) {
 	rg.GET("/entries", authz.RequiresPermissions("explorer_sftp:entries"), a.GetEntries)
 	rg.POST("/upload", authz.RequiresPermissions("explorer_sftp:upload"), a.Upload)
 	rg.GET("/download", authz.RequiresPermissions("explorer_sftp:download"), a.Download)
+	rg.POST("/create", authz.RequiresPermissions("explorer_sftp:create"), a.CreateDir)
 }
